adsterra implemantation cont..social bar

--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
 
     gtag('config', 'G-5HHR23RQBD');
   </script>
+  <!-- Adsterra Social Bar - This is loaded in the body -->
+  <script type="text/javascript"
+    src="//pl27942047.effectivegatecpm.com/5e/1a/62/5e1a62d6eb8849d640f7e36bdec8e875.js"></script>
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
-
-  
 </body>
 
 </html>
